force-app/main/default/objects/Opportunity/fields/AmountOpen__c.field-meta.xml
<CustomField>
    <fullName>AmountOpen__c</fullName>
    <description>If Opportunity is open, display Amount - if not, display 0</description>
    <formula>IF(
IsClosed,
0,
Amount
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Opportunity is open, display Amount - if not, display 0</inlineHelpText>
    <label>Amount Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>