force-app/main/default/objects/Opportunity/fields/AmountPDF__c.field-meta.xml
<CustomField>
    <fullName>AmountPDF__c</fullName>
    <formula>IF(
    ISBLANK(SyncedQuoteId),
    &apos;&apos;,
    IF((!ISPICKVAL(SyncedQuote.CurrencyIsoCode,&apos;CZK&apos;)),TEXT(SyncedQuote.CurrencyIsoCode)+&apos; &apos;,&apos;&apos;)+

    /* Text Thousands Separator under 1 B - preserves decimals, negatives */
    /* Under 1 K */
    IF( ROUND(Amount,0) &lt; 1000, TEXT(ROUND(Amount,0)),

    /* Under 1 M */
    IF(ROUND(Amount,0) &lt; 1000000, TEXT(FLOOR(ROUND(Amount,0) /1000))
    &amp; &apos; &apos;
    &amp; RIGHT(TEXT(ROUND(Amount,0)), LEN(TEXT(ROUND(Amount,0))) - LEN(TEXT(FLOOR(ROUND(Amount,0) /1000)))),

    /* Under 1 B */
    IF(ROUND(Amount,0) &lt; 1000000000, TEXT(FLOOR(ROUND(Amount,0) /1000000))
    &amp; &apos; &apos;
    &amp; MID(TEXT(ROUND(Amount,0)), 1 + LEN(TEXT(FLOOR(ROUND(Amount,0) /1000000))),3)
    &amp; &apos; &apos;
    &amp; RIGHT(TEXT(ROUND(Amount,0)), LEN(TEXT(ROUND(Amount,0))) - LEN(TEXT(FLOOR(ROUND(Amount,0) /1000)))),

    /* 1 B &amp; up */
    IF(ROUND(Amount,0) &gt;= 1000000000, &quot;#TooHigh!&quot;, NULL))))+

    IF(ISPICKVAL(SyncedQuote.CurrencyIsoCode,&apos;CZK&apos;),&apos; Kč&apos;,&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (PDF)</label>
    <type>Text</type>
</CustomField>