force-app/main/default/objects/Opportunity/fields/AmountWon__c.field-meta.xml
<CustomField>
    <fullName>AmountWon__c</fullName>
    <description>If Opportunity is closed won, display Amount - if not, display 0</description>
    <formula>IF(
IsWon,
Amount,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Opportunity is closed won, display Amount - if not, display 0</inlineHelpText>
    <label>Amount Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>