force-app/main/default/objects/Opportunity/fields/Architect__c.field-meta.xml
<CustomField>
    <fullName>Architect__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Optional Person related to the Architect Account</description>
    <inlineHelpText>Optional Person related to the Architect Account</inlineHelpText>
    <label>Architect</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Architect_Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Architect)</relationshipLabel>
    <relationshipName>OpportunitiesArchitect</relationshipName>
    <type>Lookup</type>
</CustomField>