force-app/main/default/objects/Opportunity/fields/Architect_Account__c.field-meta.xml
<CustomField>
    <fullName>Architect_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mandatory field in order to move the Opportunity forward</description>
    <label>Architect (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities Architects</relationshipLabel>
    <relationshipName>Opportunities_Architect_Account</relationshipName>
    <type>Lookup</type>
</CustomField>