force-app/main/default/objects/Opportunity/fields/BudgetConfirmed__c.field-meta.xml
<CustomField>
    <fullName>BudgetConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Confirmed</label>
    <type>Checkbox</type>
</CustomField>