force-app/main/default/objects/Opportunity/fields/Client_reference_Nr_NOT_REQUIRED__c.field-meta.xml
<CustomField>
    <fullName>Client_reference_Nr_NOT_REQUIRED__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this checkbox in case you don&apos;t want to add a Client reference number. In case the Checkbox = TRUE, the validation for this fields is not triggered</description>
    <inlineHelpText>Mark this checkbox in case you don&apos;t want to add a Client reference number</inlineHelpText>
    <label>Client reference Number NOT REQUIRED</label>
    <type>Checkbox</type>
</CustomField>