force-app/main/default/objects/Opportunity/fields/ClientReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ClientReferenceNumber__c</fullName>
    <label>Client reference number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>