force-app/main/default/objects/Opportunity/fields/Days_left_to_Realization_start__c.field-meta.xml
<CustomField>
    <fullName>Days_left_to_Realization_start__c</fullName>
    <formula>RealizationStartDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left to Realization start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>