force-app/main/default/objects/Opportunity/fields/DeliveryWindow__c.field-meta.xml
<CustomField>
    <fullName>DeliveryWindow__c</fullName>
    <label>Delivery Window</label>
    <type>TextArea</type>
</CustomField>