force-app/main/default/objects/Opportunity/fields/DiscoveryCompleted__c.field-meta.xml
<CustomField>
    <fullName>DiscoveryCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Completed</label>
    <type>Checkbox</type>
</CustomField>