force-app/main/default/objects/Opportunity/fields/DocuSignContact__c.field-meta.xml
<CustomField>
    <fullName>DocuSignContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (DocuSign Contact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>