force-app/main/default/objects/Opportunity/fields/DriveFolderId__c.field-meta.xml
<CustomField>
    <fullName>DriveFolderId__c</fullName>
    <label>Drive Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>