force-app/main/default/objects/Opportunity/fields/End_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>End_Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (End Client Contact)</relationshipLabel>
    <relationshipName>Opportunities10</relationshipName>
    <type>Lookup</type>
</CustomField>