force-app/main/default/objects/Opportunity/fields/End_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>End_Contact_Account__c</fullName>
    <formula>End_Client_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Contact Account</label>
    <type>Text</type>
</CustomField>