force-app/main/default/objects/Opportunity/fields/End_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>End_Contact_Email__c</fullName>
    <formula>End_Client_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Contact Email</label>
    <type>Text</type>
</CustomField>