force-app/main/default/objects/Opportunity/fields/End_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>End_Contact_Phone__c</fullName>
    <formula>End_Client_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Contact Phone</label>
    <type>Text</type>
</CustomField>