force-app/main/default/objects/Opportunity/fields/Final_Invoice_Paid_Date_Plan__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Paid_Date_Plan__c</fullName>
    <formula>RealizationEndDate__c + FinalInvoicePaymentTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Invoice Paid Date Plan</label>
    <type>Date</type>
</CustomField>