force-app/main/default/objects/Opportunity/fields/FinalInvoiceIssuedDatePlan__c.field-meta.xml
<CustomField>
    <fullName>FinalInvoiceIssuedDatePlan__c</fullName>
    <formula>RealizationEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Invoice Issued Date Plan</label>
    <type>Date</type>
</CustomField>