force-app/main/default/objects/Opportunity/fields/FinalInvoicePaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>FinalInvoicePaymentTerm__c</fullName>
    <label>Final Invoice Payment Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>