force-app/main/default/objects/Opportunity/fields/Fiscal_month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_month__c</fullName>
    <formula>CASE(MONTH( CloseDate ),
1, &quot;10 - January&quot;,
2, &quot;11 - February&quot;,
3, &quot;12 - March&quot;,
4, &quot;01 - April&quot;,
5, &quot;02 - May&quot;,
6, &quot;03 - June&quot;,
7, &quot;04 - July&quot;,
8, &quot;05 - August&quot;,
9, &quot;06 - September&quot;,
10, &quot;07 - October&quot;,
11, &quot;08 -November&quot;,
12, &quot;09 - December&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal month</label>
    <type>Text</type>
</CustomField>