force-app/main/default/objects/Opportunity/fields/Fiscal_year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_year__c</fullName>
    <formula>IF(MONTH(CloseDate) &lt; 4 , YEAR( CloseDate )- 1, YEAR( CloseDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>