force-app/main/default/objects/Opportunity/fields/GDriveFolderStructureJSON__c.field-meta.xml
<CustomField>
    <fullName>GDriveFolderStructureJSON__c</fullName>
    <label>GDrive Folder Structure JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>