force-app/main/default/objects/Opportunity/fields/GoogleDriveFolderLink__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderLink__c</fullName>
    <formula>IF( ISBLANK(DriveFolderId__c),
&apos;Folder not created&apos;,
HYPERLINK(&apos;https://drive.google.com/drive/folders/&apos;&amp; DriveFolderId__c  , &apos;Google Drive Folder&apos; , &apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Drive Folder Link</label>
    <type>Text</type>
</CustomField>