force-app/main/default/objects/Opportunity/fields/HandoverDate__c.field-meta.xml
<CustomField>
    <fullName>HandoverDate__c</fullName>
    <label>Handover Date</label>
    <type>Date</type>
</CustomField>