force-app/main/default/objects/Opportunity/fields/Invoice_Notification2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notification2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Zde zadejte v případě potřeby dalšího adresáta pro požadavek na vystavení faktury nebo nechte pole prázdné.</inlineHelpText>
    <label>Invoice Notification</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Invoice Notification)</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>