force-app/main/default/objects/Opportunity/fields/Invoicing_Department__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Kontaktní osoba fakturace</inlineHelpText>
    <label>Invoicing Department</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Invoicing Department)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>