force-app/main/default/objects/Opportunity/fields/InvoicingDepartmentEmail__c.field-meta.xml
<CustomField>
    <fullName>InvoicingDepartmentEmail__c</fullName>
    <formula>Invoicing_Department__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Department Email</label>
    <type>Text</type>
</CustomField>