force-app/main/default/objects/Opportunity/fields/IsAccountSynced__c.field-meta.xml
<CustomField>
    <fullName>IsAccountSynced__c</fullName>
    <formula>ISPICKVAL(Account.SyncStatus__c,&quot;SUCCESS&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Synced</label>
    <type>Checkbox</type>
</CustomField>