force-app/main/default/objects/Opportunity/fields/IsClosedWonApexSet__c.field-meta.xml
<CustomField>
    <fullName>IsClosedWonApexSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Won Apex Set</label>
    <type>Checkbox</type>
</CustomField>