force-app/main/default/objects/Opportunity/fields/IsOrderSigned__c.field-meta.xml
<CustomField>
    <fullName>IsOrderSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Signed</label>
    <type>Checkbox</type>
</CustomField>