force-app/main/default/objects/Opportunity/fields/IsProject__c.field-meta.xml
<CustomField>
    <fullName>IsProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project</label>
    <type>Checkbox</type>
</CustomField>