force-app/main/default/objects/Opportunity/fields/NumericalSeries__c.field-meta.xml
<CustomField>
    <fullName>NumericalSeries__c</fullName>
    <label>Numerical Series</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>