force-app/main/default/objects/Opportunity/fields/OneTime_Update__c.field-meta.xml
<CustomField>
    <fullName>OneTime_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Just to make an update to generate a new csv file manually</description>
    <inlineHelpText>Just to make an update to generate a new csv file manually</inlineHelpText>
    <label>OneTime Update</label>
    <type>Checkbox</type>
</CustomField>