force-app/main/default/objects/Opportunity/fields/OnSiteContactId__c.field-meta.xml
<CustomField>
    <fullName>OnSiteContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Kontaktní osoba realizace</inlineHelpText>
    <label>On-site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (On-site Contact)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>