force-app/main/default/objects/Opportunity/fields/OpportunityNo__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNo__c</fullName>
    <label>Opportunity No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>