force-app/main/default/objects/Opportunity/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <label>Opportunity Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>