force-app/main/default/objects/Opportunity/fields/OrderDeliveryDatePlan__c.field-meta.xml
<CustomField>
    <fullName>OrderDeliveryDatePlan__c</fullName>
    <inlineHelpText>= Realization End</inlineHelpText>
    <label>Order Delivery Date Plan</label>
    <type>Date</type>
</CustomField>