force-app/main/default/objects/Opportunity/fields/OrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDueDate__c</fullName>
    <description>Due Date is required in SAP (means due date for realization)</description>
    <inlineHelpText>= Realization Start; Due Date is required in SAP (means due date for realization)</inlineHelpText>
    <label>Order Due Date</label>
    <type>Date</type>
</CustomField>