force-app/main/default/objects/Opportunity/fields/PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerm__c</fullName>
    <label>Proforma Payment Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>