force-app/main/default/objects/Opportunity/fields/Priority_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Priority_Indicator__c</fullName>
    <formula>CASE(Priority__c,
&apos;Low&apos;, IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),
&apos;Mid&apos;, IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Amber&quot;),
&apos;High&apos;, IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Indicator</label>
    <type>Text</type>
</CustomField>