force-app/main/default/objects/Opportunity/fields/ProformaIssuedDatePlan__c.field-meta.xml
<CustomField>
    <fullName>ProformaIssuedDatePlan__c</fullName>
    <label>Proforma Issued Date Plan</label>
    <type>Date</type>
</CustomField>