force-app/main/default/objects/Opportunity/fields/ProformaPaidDatePlan__c.field-meta.xml
<CustomField>
    <fullName>ProformaPaidDatePlan__c</fullName>
    <label>Proforma Paid Date Plan</label>
    <type>Date</type>
</CustomField>