force-app/main/default/objects/Opportunity/fields/ProformaPercent__c.field-meta.xml
<CustomField>
    <fullName>ProformaPercent__c</fullName>
    <label>Proforma %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>