force-app/main/default/objects/Opportunity/fields/ProformaValue__c.field-meta.xml
<CustomField>
    <fullName>ProformaValue__c</fullName>
    <formula>ProformaPercent__c *  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proforma Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>