force-app/main/default/objects/Opportunity/fields/ProjectManagerId__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Project Manager)</relationshipLabel>
    <relationshipName>PMOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>