force-app/main/default/objects/Opportunity/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <description>Project Number - YY000000</description>
    <inlineHelpText>Project Number - YY000000</inlineHelpText>
    <label>Project Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>