force-app/main/default/objects/Opportunity/fields/Quote_Language__c.field-meta.xml
<CustomField>
    <fullName>Quote_Language__c</fullName>
    <formula>CASE(
    TEXT(SyncedQuote.Language__c),
    &apos;cs&apos;, &apos;CS&apos;,
    &apos;en_US&apos;, &apos;EN&apos;,
    &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Language</label>
    <type>Text</type>
</CustomField>