force-app/main/default/objects/Opportunity/fields/QuoteCreatedDatePDF__c.field-meta.xml
<CustomField>
    <fullName>QuoteCreatedDatePDF__c</fullName>
    <formula>IF(
    ISBLANK(SyncedQuoteId),
    &apos;&apos;,
    TEXT(DAY(DATEVALUE(SyncedQuote.CreatedDate)))+&quot;.&quot;+
    TEXT(MONTH(DATEVALUE(SyncedQuote.CreatedDate)))+&quot;.&quot;+
    TEXT(YEAR(DATEVALUE(SyncedQuote.CreatedDate)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Created Date (PDF)</label>
    <type>Text</type>
</CustomField>