force-app/main/default/objects/Opportunity/fields/QuotesCount__c.field-meta.xml
<CustomField>
    <fullName>QuotesCount__c</fullName>
    <label>Quotes Count</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>