force-app/main/default/objects/Opportunity/fields/Realisation_Start_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Realisation_Start_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please, update the Realisation Start Date, or mark the date as confirmed</inlineHelpText>
    <label>Realisation Start confirmed</label>
    <type>Checkbox</type>
</CustomField>