force-app/main/default/objects/Opportunity/fields/Realisation_Start_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Realisation_Start_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automaticky se nastaví na &quot;ANO&quot;, pokud byla odeslána emailová a &quot;zvonečková&quot; notifikace o Realisation Start za 10 týdnů</description>
    <inlineHelpText>Automaticky se nastaví na &quot;ANO&quot;, pokud byla odeslána emailová a &quot;zvonečková&quot; notifikace o Realisation Start za 10 týdnů</inlineHelpText>
    <label>Realisation Start Notification Sent</label>
    <type>Checkbox</type>
</CustomField>