force-app/main/default/objects/Opportunity/fields/RealizationEndDate__c.field-meta.xml
<CustomField>
    <fullName>RealizationEndDate__c</fullName>
    <label>Realization End</label>
    <type>Date</type>
</CustomField>