force-app/main/default/objects/Opportunity/fields/RealizationEndPlan__c.field-meta.xml
<CustomField>
    <fullName>RealizationEndPlan__c</fullName>
    <label>Realization End Plan</label>
    <type>Date</type>
</CustomField>