force-app/main/default/objects/Opportunity/fields/RealizationStartDate__c.field-meta.xml
<CustomField>
    <fullName>RealizationStartDate__c</fullName>
    <label>Realization Start</label>
    <type>Date</type>
</CustomField>