force-app/main/default/objects/Opportunity/fields/Release_to_production_date__c.field-meta.xml
<CustomField>
    <fullName>Release_to_production_date__c</fullName>
    <label>Release to production date</label>
    <type>Date</type>
</CustomField>