force-app/main/default/objects/Opportunity/fields/ResponsibleTechnicianId__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleTechnicianId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Responsible Technician)</relationshipLabel>
    <relationshipName>TechOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>