force-app/main/default/objects/Opportunity/fields/SalesManagementNote__c.field-meta.xml
<CustomField>
    <fullName>SalesManagementNote__c</fullName>
    <description>Internal note used for additional info about Opportunity progress</description>
    <inlineHelpText>Internal note used for additional info about Opportunity progress</inlineHelpText>
    <label>Sales Management Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>