force-app/main/default/objects/Opportunity/fields/SOTNumber__c.field-meta.xml
<CustomField>
    <fullName>SOTNumber__c</fullName>
    <description>ID from SOT</description>
    <externalId>true</externalId>
    <inlineHelpText>ID from SOT</inlineHelpText>
    <label>SOT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>