force-app/main/default/objects/Opportunity/fields/Synced_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Synced_Quote_Type__c</fullName>
    <formula>TEXT(SyncedQuote.Quote_Type__c)</formula>
    <label>Synced Quote Type</label>
    <type>Text</type>
</CustomField>