force-app/main/default/objects/Opportunity/fields/SyncedQuoteName__c.field-meta.xml
<CustomField>
    <fullName>SyncedQuoteName__c</fullName>
    <formula>SyncedQuote.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Synced Quote Name</label>
    <type>Text</type>
</CustomField>