force-app/main/default/objects/Opportunity/fields/Terms_and_condittions_acceptions__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_condittions_acceptions__c</fullName>
    <inlineHelpText>Ostatní ujednání na objednávce</inlineHelpText>
    <label>Other arrangements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>