force-app/main/default/objects/Opportunity/fields/Warranty_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_in_Months__c</fullName>
    <defaultValue>24</defaultValue>
    <label>Warranty in Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>