force-app/main/default/objects/Opportunity/fields/X_Amount_Open__c.field-meta.xml
<CustomField>
    <fullName>X_Amount_Open__c</fullName>
    <description>For Win Ratio Amount Value report</description>
    <label>X_Amount Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>