force-app/main/default/objects/Opportunity/validationRules/AccountMustBeValidatedBeforeClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountMustBeValidatedBeforeClosedWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Account.IsValidated__c == false, ISCHANGED(StageName), ISPICKVAL(StageName,&quot;Closed Won&quot;))</errorConditionFormula>
    <errorMessage>Account must be validated in SAP before the Opportunity is transfered to Closed Won.</errorMessage>
</ValidationRule>