force-app/main/default/objects/Opportunity/validationRules/Architect_needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Architect_needed</fullName>
    <active>false</active>
    <description>Architect is needed, before moving the Oppty to any further stages</description>
    <errorConditionFormula>AND(
 ISBLANK (Architect_Account__c),
CloseDate &gt;= Date(2023,06,01),
IsWon = TRUE,
OR( 
(ISPICKVAL(StageName, &quot;Closed Won&quot;)),
(ISPICKVAL(StageName, &quot;Finalizing&quot;)),
(ISPICKVAL(StageName, &quot;Assessment of Needs&quot;)),
(ISPICKVAL(StageName, &quot;Technical support&quot;)),
(ISPICKVAL(StageName, &quot;Quoted&quot;)),
(ISPICKVAL(StageName, &quot;Positive Follow-up&quot;)),
(ISPICKVAL(StageName, &quot;Negotiation&quot;))
))</errorConditionFormula>
    <errorMessage>Please, add an Architect in order to move the Opportunity further</errorMessage>
</ValidationRule>