force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Opp_must_have_synced_Quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Opp_must_have_synced_Quote</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Won&quot;),
SyncedQuoteId == null 
)</errorConditionFormula>
    <errorMessage>For &apos;Closed Won&apos; Stage - related Quote must be synced with Opportunity</errorMessage>
</ValidationRule>